--- a/assets/css/dynamic.css
+++ b/assets/css/dynamic.css
@@ -304,6 +304,46 @@
     width: 100%;
 }
 
+/* POP-UP */
+
+.pop-up-overlay {
+    position: fixed;
+    inset: 0;
+
+    display: flex;
+    align-items: end;
+    justify-content: center;
+    z-index: 1000;
+
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.5s ease-in-out, visibility 0.5s, transform 0.5s ease-in-out;
+
+    pointer-events: none;
+}
+
+.pop-up-overlay.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+.pop-up-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border-radius: 15px;
+
+    height: 50px;
+    width: 500px;
+    margin-bottom: 20px;
+}
+
+.pop-up-box div {
+    color: white;
+    font-weight: bold;
+}
+
 @media screen and (max-width: 1080px) {
     .pc-container-window-item {
         width: 200px;
