--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -56,6 +56,7 @@ main {
 .pc-container-search, .pc-container-window, .pc-container-controls,
 .comparator-container-window, .comparator-container-controls {
     border: solid black 2px;
+    box-shadow: var(--box-shadow);
     border-radius: 15px;
 }
 
